--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-html, body, #sidebar, #map, .fullContainer {
+html, body, #map, .fullContainer {
   height: 100%;
   margin: 0;
 
@@ -10,6 +10,8 @@ html, body, #sidebar, #map, .fullContainer {
 
 #sidebar {
   width: 500px;
+  padding: 15px;
+  font: 14px/24px 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
 #map {
@@ -21,7 +23,6 @@ html, body, #sidebar, #map, .fullContainer {
 background-color: #fff;
 border-radius: 3px;
 bottom: 30px;
-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
 padding: 10px;
 position: absolute;
