edit popup font and data sources

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,7 @@ height: 10px;
 margin-right: 5px;
 width: 10px;
 }
+
+.mapboxgl-popup-content {
+  font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
